repair contact on iphone

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -212,6 +212,8 @@ body {
 
 		span {
 			font-size: 3.2rem;
+			color: c.$silverColor;
+			text-decoration: none;
 		}
 	}
 
